# cllm

./: .gitignore  .gitmodules  LICENSE  README.md  ca  cllm.py  cllm.ttl  git_operations.ttl  install_cllm.sh  pyproject.toml  requirements.txt  sample_usage.ipynb  setup.cfg  what_is_composability.md
ontology/: ARCHITECTURE.md  DEVELOPMENT.md  analyze_framework_details.sparql  analyze_framework_usage.sparql  analyze_frameworks.py  cllm.ttl  cllm_activity.puml  cllm_ontology.puml  cllm_requirements.puml  conversation.ttl  get_frameworks.py  get_frameworks.sparql  meta.ttl  metameta.ttl  ontology.md  problem.ttl  query.sparql  relationships.sparql  setup_dev_env.sh  setup_symlinks.py  solution.ttl  test_frameworks.py
src/cllm/: main.py
